--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/collections": "^2.3",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.14",
+        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/orm": "^3.3",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "7.2.*",
@@ -22,6 +26,7 @@
         "symfony/property-info": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/serializer": "7.2.*",
+        "symfony/stimulus-bundle": "^2.24",
         "symfony/translation": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/ux-chartjs": "^2.24",
@@ -68,10 +73,12 @@
             "importmap:install": "symfony-cmd"
         },
         "post-install-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "cp vendor/symfony/ux-chartjs/assets/dist/controller.js ./assets/controllers/symfony_chartjs_controller.js"
         ],
         "post-update-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "cp vendor/symfony/ux-chartjs/assets/dist/controller.js ./assets/controllers/symfony_chartjs_controller.js"
         ]
     },
     "conflict": {
